--- a/qml.qrc
+++ b/qml.qrc
@@ -5,5 +5,7 @@
         <file>Page1Form.ui.qml</file>
         <file>qtquickcontrols2.conf</file>
         <file>TaskLayout.qml</file>
+        <file>TaskModel.qml</file>
+        <file>TaskView.qml</file>
     </qresource>
 </RCC>
